# LumeSync-Teacher

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron-builder.json  package-lock.json  package.json
.github/workflows/: release.yml
.native-runtime-deps/: package-lock.json  package.json
electron/: main.js
native/: build-installer.ps1  package-native.ps1
native/installer/: teacher-native.nsi
native/modern-bootstrapper/: App.xaml  App.xaml.cs  LumeSyncTeacherInstaller.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
native/shared/: CMakeLists.txt
native/shared/include/lumesync/: shared.h
native/shared/src/: shared.cpp
native/shell/: CMakeLists.txt
native/shell/src/: main.cpp  resource.h  shell.rc
scripts/: legacy-lume-migrator.js  migrate-legacy-lume-batch.js  migrate-legacy-lume.js  start-electron.js  start-native.js
server/: index.js
server/src/: README.md  config.js  core-paths.js  courses.js  data.js  proxy.js  routes.js  socket.js  submissions.js  teacher-shell-build.js
shared/docs/: README.md
shared/protocol/: teacher-host.ts
shared/public/: export-preview.html  index.html  render-engine.js  student-app.js  student.html  teacher-app.js
shared/public/courses/: Knn.lume  LumeSync-AI-教学演示课程 (3).lume  LumeSync-AI-教学演示课程 (4).lume
shared/public/courses/人工智能通识课/: Knn.migrated.lume  Knn_new.lume  face-recognition.migrated.lume  linear-regression.migrated.lume  neural-network-grade8-1.migrated.lume  perceptron-intro.migrated.lume
shared/public/courses/示例课件/: interaction-sync-example.migrated.lume  survey-demo.migrated.lume  survey-simple-demo.migrated.lume  test-submission.migrated.lume  vote-demo.migrated.lume  zip-format-smoke-test.lume
shared/public/courses/示例课件/zip-format-smoke-test/: manifest.json
shared/public/courses/示例课件/zip-format-smoke-test/slides/: AssetCheck.tsx  OrderCheck.tsx
shared/public/data/: classroom-layout-v1.json  course-folders.json
shared/teacher-shell/src/: app.tsx
shared/teacher-shell/src/components/: log-viewer.tsx  window-controls.tsx
shared/teacher-shell/src/panels/: settings-panel.tsx
shared/teacher-shell/src/views/: classroom-view.tsx  course-selector.tsx  student-waiting-room.tsx  submissions-browser.tsx
